GitOps-Repo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: flask-ingress
  namespace: dev

spec:
  ingressClassName: nginx

  rules:
  - host: flask.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: flask-service
            port:
              number: 80
